--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,8 @@
 		<mule.tools.version>1.2</mule.tools.version>
 		<derby.version>10.13.1.1</derby.version>
 		<activemq.version>5.15.0</activemq.version>
+		<uid>johnvansant</uid>
+		<pwd></pwd>
 	</properties>
 
 	<build>
